added a few new features
